--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,3 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<h1>Home</h1>
 
-<%= link_to "About", about_path %>
+<%= link_to "Alpha Blog", articles_path %> | <%= link_to "About", about_path %>
