--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,6 @@
-<h1>Home</h1>
+<div class="jumbotron text-center">
+  <h1 class="display-4">ALPHA BLOG</h1>
+  <%= link_to "Sign up now", "#", class: "btn btn-primary btn-lg btn-xlarge btn-dark" %>
+</div>
 
-<%= link_to "Alpha Blog", articles_path %> | <%= link_to "About", about_path %>
+
