--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,24 +1,17 @@
-<% if @article.errors.any? %>
-<h2>The following errors prevented the article from being created</h2>
-  <ul>
-    <% @article.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
-    <% end %>
-  </ul>
-<% end %>
-
 <%= form_for(@article) do |f| %>
-  <p>
-    <%= f.label :title %>
-    <%= f.text_field :title %>
-  </p>
-  <p>
-    <%= f.label :description %>
-    <%= f.text_area :description %>
-  </p>
-  <p>
-    <%= f.submit %>
-  </p>
+  <div class="form-group row">
+    <%= f.label :title, class: "col-sm-2 col-form-label text-right d-none d-sm-block" %>
+    <div class="col-sm-10">
+      <%= f.text_field :title, class: "form-control", placeholder: "Title" %>
+    </div>
+  </div>
+  <div class="form-group row">
+    <%= f.label :description, class: "col-sm-2 col-form-label text-right d-none d-sm-block" %>
+    <div class="col-sm-10">
+      <%= f.text_area :description, class: "form-control", placeholder: "Description", rows: 7 %>
+    </div>
+  </div>
+    <div class="col-sm-8">
+      <%= f.submit class: "btn btn-primary offset-sm-3" %>
+    </div>
 <% end %>
-
-<%= link_to "Back to articles listing", articles_path %>
