--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,5 +1,6 @@
-<% flash.each do |name, msg| %>
-  <ul>
-    <li><%= msg %></li>
-  </ul>
+<% flash.each do |message_type, message| %>
+  <%= content_tag(:div, class: "alert alert-#{message_type}") do %>
+    <button type="button" class="close" data-dismiss="alert"> &times; </button>
+    <%= message %>
+  <% end %>
 <% end %>
