Style articles listing page

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -2,4 +2,6 @@
   <%= f.text_field :title, hide_label: true, label_as_placeholder: true %>
   <%= f.text_area :description, hide_label: true, label_as_placeholder: true, rows: 7 %>
   <%= f.submit %>
+  <%= link_to "Cancel", :back, class: "btn btn-secondary" %>
 <% end %>
+
