--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,19 +1,21 @@
-<h1>All Articles</h1>
+<h1 class="text-center">All Articles</h1>
 
-<%= link_to "Create new article", new_article_path %>
-<table>
-  <tr>
-    <th>Title</th>
-    <th>Description</th>
-  </tr>
-  
-  <% @articles.each do |article| %>
-    <tr>
-      <td><%= link_to article.title, article %></td>
-      <td><%= article.description %></td>
-      <td><%= link_to 'Edit', edit_article_path(article) %></td>
-      <td><%= link_to 'Show', article_path(article) %></td>
-      <td><%= link_to 'Delete', article_path(article), method: :delete, data: { confirm: "Are you sure?" } %></td>
-    </tr>
-  <% end %>
-</table>
+<% @articles.each do |article| %>
+  <div class="row">
+    <div class="col-sm-8 mx-auto">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title"><%= link_to article.title, article %></h5>
+          <!--<h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>-->
+          <p class="card-text"><%= truncate(article.description, length: 100) %></p>
+        </div>
+        <div class="card-footer">
+          <%= link_to "Edit", edit_article_path(article), class: "badge badge-secondary" %>
+          <%= link_to "Delete", article_path(article),  class: "badge badge-secondary", 
+                                method: :delete,
+                                data: { confirm: "Are you sure?" } %>
+        </div>
+      </div>
+    </div>
+  </div>
+<% end %>
