--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
-<div class="jumbotron text-center">
-  <h1 class="display-4">ALPHA BLOG</h1>
-  <%= link_to "Sign up now", "#", class: "btn btn-primary btn-lg btn-xlarge btn-dark" %>
+<div class="home container-fluid text-center">
+  <h1 class="my-5">ALPHA BLOG</h1>
+  <%= link_to "Sign Up", "#", class: "btn btn-outline-light btn-xlarge" %>
 </div>
 
 
