--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,37 +1,4 @@
 <h1 class="text-center display-3">All Articles</h1>
 
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-sm-8 mx-auto">
-      <div class="list-group">
-        <% @articles.each do |article| %>
-          <div class="list-group-item list-group-item-action flex-column align-items-start">
-            <div class="d-flex w-100 justify-content-between">
-              <h5 class="mb-1"><%= link_to article.title, article %></h5>
-              <small class="text-muted"><%= time_ago_in_words(article.created_at) %> ago</small>
-            </div>
-            <p class="mb-1"><%= truncate(article.description, length: 100) %></p>
-            <div class="border-top mt-2">
-              <div class="mt-2">
-                <div class="d-flex bd-highlight">
-                  <div class="flex-grow-1 bd-highlight">
-                    <small class="text-muted">
-                      Created by: <%= article.user.username %><br>
-                      Last updated: <%= time_ago_in_words(article.updated_at) %> ago
-                    </small>
-                  </div>
-                  <div class="bd-highlight"><%= link_to "Edit", edit_article_path(article), class: "badge badge-primary" %></div>
-                  <div class="bd-highlight ml-2">
-                    <%= link_to "Delete", article_path(article),  class: "badge badge-danger", 
-                                                    method: :delete,
-                                                    data: { confirm: "Are you sure?" } %>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        <% end %>
-    </div>
-  </div>
-</div>
+<%= render 'article', obj: @articles %>
 
