--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -46,6 +46,11 @@ h1, h2 {
   font-size: 2.7em;
 }
 
+.listing {
+  list-style: none;
+  padding-left: 0;
+}
+
 .alert-alert {
   @extend .alert-danger;
 }
