--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,4 +1,11 @@
 <h1 class="text-center display-3">All Articles</h1>
 
+<div class="center">
+  <%= will_paginate %>
+</div>
+
 <%= render 'article', obj: @articles %>
 
+<div class="center">
+  <%= will_paginate %>
+</div>
