--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,4 +10,12 @@
 
 <h4 class="text-center mt-3 text-white"><%= @user.username %>'s articles:</h4>
 
-<%= render 'articles/article', obj: @user.articles %>
+<div class="center">
+  <%= will_paginate @user_articles %>
+</div>
+
+<%= render 'articles/article', obj: @user_articles %>
+
+<div class="center">
+  <%= will_paginate @user_articles %>
+</div>
