--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -35,15 +35,15 @@ h1, h2 {
 
 .home h1 {
   font-family: 'Oswald', sans-serif;
-  font-size: 6.5em;
+  font-size: 2.3em;
   color: #FFD166;
-  letter-spacing: 0px;
-  line-height: 92px;
-  margin-top: 75px;
+  letter-spacing: 2px;
+  margin-top: 29px;
   font-weight: bold;
 }
-.btn-xlarge {
-  font-size: 2.7em;
+
+.home p {
+  font-size: 1.2em;
 }
 
 .listing {
@@ -82,4 +82,13 @@ footer ul {
 footer ul li {
   float: left;
   margin-left: 15px;
+}
+
+.login-signup {
+  border-radius: 18px;
+  padding: 0.9em 0.9em;
+}
+
+.card {
+  border-radius: 8px;
 }
