--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -18,12 +18,14 @@
                       Last updated: <%= time_ago_in_words(article.updated_at) %> ago
                     </small>
                   </div>
-                  <div class="bd-highlight"><%= link_to "Edit", edit_article_path(article), class: "badge badge-primary" %></div>
-                  <div class="bd-highlight ml-2">
-                    <%= link_to "Delete", article_path(article),  class: "badge badge-danger", 
-                                                    method: :delete,
-                                                    data: { confirm: "Are you sure?" } %>
-                  </div>
+                  <% if logged_in? && current_user == article.user %>
+                    <div class="bd-highlight"><%= link_to "Edit", edit_article_path(article), class: "badge badge-primary" %></div>
+                    <div class="bd-highlight ml-2">
+                      <%= link_to "Delete", article_path(article),  class: "badge badge-danger", 
+                                                      method: :delete,
+                                                      data: { confirm: "Are you sure?" } %>
+                    </div>
+                  <% end %>
                 </div>
               </div>
             </div>
