--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -28,9 +28,11 @@
     <p class="card-text"><%= simple_format(@article.description) %></p>
   </div>
   <div class="card-footer">
+    <% if logged_in? && current_user == @article.user %>
           <%= link_to "Edit", edit_article_path(@article), class: "badge badge-primary" %>
           <%= link_to "Delete", article_path(@article),  class: "badge badge-danger", 
                                 method: :delete,
                                 data: { confirm: "Are you sure?" } %>
+    <% end %>
   </div>
 </div>
