--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,27 +1,39 @@
-<nav class="navbar navbar-expand-lg sticky-top navbar-dark">
+<nav class="navbar navbar-expand navbar-dark sticky-top">
   <%= link_to root_path, class: "navbar-brand" do %>
     <%= fa_icon "angle-up 2x", id: "logo" %><span> L P H A</span>
   <% end %>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav ml-auto">
+  <div class="navbar-collapse collapse">
+    <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <%= link_to "Articles", articles_path, class: "nav-link" %>
+        <%= link_to "Users", users_path, class: "nav-link" %>
       </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Actions
-        </a>
-        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-          <%= link_to "New Article", new_article_path, class: "dropdown-item" %>
-          <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </li>
+      <% if logged_in? %>
+        <li class="nav-item active">
+          <%= link_to "Articles", articles_path, class: "nav-link" %>
+        </li>
+      <% end %>
+    </ul>
+    <ul class="navbar-nav ml-auto">
+      <% if logged_in? %>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <%= current_user.username %>
+          </a>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+            <%= link_to "Profile", current_user, class: "dropdown-item" %>
+            <div class="dropdown-divider"></div>
+            <%= link_to "Settings", edit_user_path(current_user), class: "dropdown-item" %>
+            <%= link_to "Log out", logout_path, method: :delete, class: "dropdown-item" %>
+          </div>
+        </li>
+        <% else %>
+          <li class="nav-item active">
+            <%= link_to "Log in", login_path, class: "login-signup nav-link badge badge-pill badge-secondary" %>
+          </li>
+          <li class="nav-item active">
+            <%= link_to "Sign up", signup_path, class: "ml-2 login-signup nav-link badge badge-pill badge-primary" %>
+          </li>
+      <% end %>
     </ul>
   </div>
 </nav>
