--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,12 @@
 <div class="home container-fluid text-center">
-  <h1 class="my-5">ALPHA BLOG</h1>
-  <%= link_to "Sign Up", "#", class: "btn btn-outline-light btn-xlarge" %>
+  <h1 class="text-center">
+    Express yourself and <br> share your passions.
+  </h1>
+  <p class="text-center text-white">
+    Alpha Blog, enables you to capture and share the things that matter to you.
+    on
+  </p>
+  <%= link_to "Sign Up - It's free.", signup_path, class: "p-3 btn btn-primary btn-lg" %>
 </div>
 
 
