--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -15,6 +15,9 @@
     </ul>
     <ul class="navbar-nav ml-auto">
       <% if logged_in? %>
+        <li class="nav-item active">
+          <%= link_to "New Article", new_article_path, class: "nav-link" %>
+        </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <%= current_user.username %>
