--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -18,7 +18,7 @@
                       Last updated: <%= time_ago_in_words(article.updated_at) %> ago
                     </small>
                   </div>
-                  <% if logged_in? && current_user == article.user %>
+                  <% if logged_in? && current_user == article.user || current_user.admin? %>
                     <div class="bd-highlight"><%= link_to "Edit", edit_article_path(article), class: "badge badge-primary" %></div>
                     <div class="bd-highlight ml-2">
                       <%= link_to "Delete", article_path(article),  class: "badge badge-danger", 
