--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -28,7 +28,7 @@
     <p class="card-text"><%= simple_format(@article.description) %></p>
   </div>
   <div class="card-footer">
-    <% if logged_in? && current_user == @article.user %>
+    <% if logged_in? && current_user == @article.user || current_user.admin? %>
           <%= link_to "Edit", edit_article_path(@article), class: "badge badge-primary" %>
           <%= link_to "Delete", article_path(@article),  class: "badge badge-danger", 
                                 method: :delete,
