--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,12 +10,12 @@
   </head>
 
   <body>
-    <%#= render 'layouts/navigation' %>
-    <%#= render 'layouts/messages' %>
+    <%= render 'layouts/navigation' %>
+    <%= render 'layouts/messages' %>
 
     <%= yield %>
 
-    <%#= render 'layouts/footer' %>
+    <%= render 'layouts/footer' %>
     <%#= debug(params) if Rails.env.development? %>
   </body>
 </html>
